--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 		"php": "^8.1"
 	},
 	"require-dev": {
-		"nextcloud/ocp": "dev-master"
+		"nextcloud/ocp": "dev-stable31"
 	},
 	"config": {
 		"optimize-autoloader": true,
